Hotfix: Fix login page container overflow

--- a/frontend/src/app/auth/auth.module.css
+++ b/frontend/src/app/auth/auth.module.css
@@ -1,7 +1,8 @@
 /* --- MAIN CONTAINER --- */
 .container {
     position: relative;
-    width: 350px;
+    width: 100%;
+    max-width: 450px;
     padding: 30px;
 }
 
